4. Para deixa com que o texto se divida em 3 linhas, utilizei display block, margin 0 auto e width 19vh apenas para o paragrafo de container-de-descricao

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -72,6 +72,11 @@ div img {
     color: white;
 }
 
+#container-de-descricao>p {
+    display: block;
+    margin: 0 377px;
+}
+
 #container-de-descricao>ol {
     padding: 15px 0px;
 }
