4. Para deixa com que o texto se divida em 3 linhas, utilizei display block, margin 0 auto e width 19vh apenas para o paragrafo de container-de-descricao

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -68,13 +68,14 @@ div img {
   **/
 
 #container-de-descricao {
-    background-color: #2274a5;
+    background-color: #2274a5;    
     color: white;
 }
 
 #container-de-descricao>p {
     display: block;
-    margin: 0 377px;
+    margin: 0 auto;
+    width: 19vh
 }
 
 #container-de-descricao>ol {
@@ -105,6 +106,7 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
