--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -106,7 +106,9 @@ table {
   width: 60%;
   text-align: center;
 }
-
+table img{
+    width: 6vh;
+}
 td button {
   background-color: #fadf63;
   width: 150px;
