7. Para corrigir o botão de lupa foi comentado uma parte do css que colocava um background q deixava o botão todo preto e mudado o width no css .icone

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -33,9 +33,9 @@ div > p:first-child {
   display: inline;
 }
 
-div img {
+/* div img {
   background: black;
-}
+} */
 
 .botao-amarelo {
   background-color: #ffaf43;
@@ -57,7 +57,7 @@ div img {
 }
 
 .icone {
-  height: 15px;
+  width: 1.6vh;
 }
 
 /** 
