--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -135,3 +135,9 @@ td button {
 #back-button:hover {
   background-color: #635a3d;
 }
+.botao-comprar:hover{
+background-color: #a6ad19;
+}
+.botao-comprar:active{
+    color: white;
+}
