9. Para deixar apenas a borda de baixo, criei uma class para o campo de texto, dei border 0 e border-bottom 2px solid black

--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -141,3 +141,7 @@ background-color: #a6ad19;
 .botao-comprar:active{
     color: white;
 }
+.campo-texto{
+    border: 0;
+    border-bottom: 2px black solid;
+}
