--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -22,9 +22,9 @@ input {
   width: 500px;
 }
 
-button:focus {
+/* button:focus {
   color: white;
-}
+} */
 
 img {
   width: 100px;
@@ -59,6 +59,12 @@ div > p:first-child {
 
 .icone {
   width: 1.6vh;
+}
+.icone:hover{
+    opacity: 50%;
+}
+.icone:active{
+    opacity: 100%;
 }
 
 /** 
