--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -141,6 +141,10 @@ td button {
   font-size: 10px;
   color: black;
 }
+.div-back-button{
+    margin-top: 100px;
+    text-align: center;
+}
 
 #back-button:hover {
   background-color: #635a3d;
