--- a/modulo1/projeto-portfolio/style.css
+++ b/modulo1/projeto-portfolio/style.css
@@ -5,48 +5,104 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-img{
-    border-radius: 50%;
-    border: #333333 solid;    
+header img {
+  border-radius: 50%;
+  border: #333333 solid;
 }
-img:hover{
-    box-shadow: 0 0 8px 0 #333333;
+header img:hover {
+  box-shadow: 0 0 8px 0 #333333;
 }
-header{
-    padding-top: 40px;
-    padding-bottom: 16px;
-    text-align: center;
-    background-image:linear-gradient(to bottom, #010101, #111111);
-    color: whitesmoke;
+header {
+  padding-top: 23vh; /*40px*/
+  padding-bottom: 16px;
+  /* height: 100vh; */
+  text-align: center;
+  background-image: linear-gradient(to bottom, #010101, #191919);
+  color: whitesmoke;
 }
-main{    
-    text-align: center;
-    background-color: #111111;
-    color: whitesmoke;    
+main {
+    padding-top: 10vh;
+  text-align: center;
+  background-color: #191919;
+  color: whitesmoke;
 }
-ul,li{
-    list-style: none;
-    padding: 4px 0;
+.div-escolaridade {
+  padding-top: 10vh;
 }
-div{
-    padding: 16px;
-    width: 70vh;
+.div-escolaridade div {
     margin: 0 auto;
+    justify-content: center;
+    display: flex;
+  }
+.div-projeto {
+  padding-top: 10vh;
 }
-footer{
-    text-align: center;
-    background-image:linear-gradient(to bottom, #111111, #010101);
-    color: whitesmoke;
+
+.div-projeto div {
+  margin: 0 auto;
+  justify-content: center;
+  display: flex;
 }
-label,input,button{
-    margin-top: 4px;
-    padding: 4px;
-    display: block;
+#img-escolas img {
+  width: 100px;
 }
-input,button{
-    width: 100%;
-    height: 2.5vh;
+#img-escolas div:hover {
+  background-color: #333333;
 }
-#mensagem{
-    height: 16vh;
+ul,
+li {
+  list-style: none;
+  padding: 4px 0;
+}
+div {
+  padding-bottom: 16px;
+  width: 70vw;
+  margin: 0 auto;
+}
+#projetos img {
+  width: 200px;
+}
+#projetos div:hover {
+  background-color: #333333;
+}
+footer {
+  padding-top: 10vh;
+  background-image: linear-gradient(to bottom, #191919, #010101);
+  color: whitesmoke;
+}
+#div-footer {
+  width: 50vw;
+  margin: 0 auto;
+  display: flex;
+}
+label {
+  text-align: left;
+  margin-bottom: 8px;
+}
+button {
+  width: 100%;
+  height: 2.5vh;
+  margin-top: 8px;
+  background-color: #888888;
+}
+button:hover {
+  background-color: white;
+}
+input {
+  width: 100%;
+  height: 2.5vh;
+  background: #555555;
+  border-bottom: whitesmoke solid 1px;
+  color: whitesmoke;
+}
+
+#mensagem {
+  height: 12vh;
+}
+#sociais {
+  display: block;
+  padding: 10px;
+}
+#formulario {
+  margin: 10px;
 }
