--- a/modulo1/projeto-portfolio/style.css
+++ b/modulo1/projeto-portfolio/style.css
@@ -9,31 +9,42 @@ header img {
   border-radius: 50%;
   border: #333333 solid;
 }
+
 header img:hover {
   box-shadow: 0 0 8px 0 #333333;
 }
+
 header {
-  padding-top: 23vh; /*40px*/
+  padding-top: 33vh; /*40px*/
   padding-bottom: 16px;
-  /* height: 100vh; */
+  height: 100vh;
   text-align: center;
   background-image: linear-gradient(to bottom, #010101, #191919);
   color: whitesmoke;
 }
+
 main {
-    padding-top: 10vh;
-  text-align: center;
+  padding-top: 10vh;
+  text-align: justify;
   background-color: #191919;
   color: whitesmoke;
 }
+
+h2,
+ul {
+  text-align: center;
+}
+
 .div-escolaridade {
   padding-top: 10vh;
 }
+
 .div-escolaridade div {
-    margin: 0 auto;
-    justify-content: center;
-    display: flex;
-  }
+  margin: 0 auto;
+  justify-content: center;
+  display: flex;
+}
+
 .div-projeto {
   padding-top: 10vh;
 }
@@ -43,52 +54,62 @@ main {
   justify-content: center;
   display: flex;
 }
+
 #img-escolas img {
   width: 100px;
 }
+
 #img-escolas div:hover {
   background-color: #333333;
 }
+
 ul,
 li {
   list-style: none;
   padding: 4px 0;
 }
+
 div {
-  padding-bottom: 16px;
   width: 70vw;
   margin: 0 auto;
 }
+
 #projetos img {
   width: 200px;
 }
+
 #projetos div:hover {
   background-color: #333333;
 }
+
 footer {
-  padding-top: 10vh;
   background-image: linear-gradient(to bottom, #191919, #010101);
   color: whitesmoke;
 }
+
 #div-footer {
-  width: 50vw;
+  width: 70vw;
   margin: 0 auto;
-  display: flex;
+  padding: 16px 0;
 }
+
 label {
   text-align: left;
-  margin-bottom: 8px;
 }
+
 button {
   width: 100%;
   height: 2.5vh;
   margin-top: 8px;
   background-color: #888888;
 }
+
 button:hover {
   background-color: white;
 }
+
 input {
+  margin: 4px 0;
   width: 100%;
   height: 2.5vh;
   background: #555555;
@@ -99,10 +120,18 @@ input {
 #mensagem {
   height: 12vh;
 }
+
 #sociais {
-  display: block;
-  padding: 10px;
+  width: 50%;
+  margin: 0 auto;
+  justify-content: center;
+  display: flex;
 }
+
+#sociais p {
+  padding: 20px;
+}
+
 #formulario {
-  margin: 10px;
+  width: 50%;
 }
