--- a/modulo1/flex-grid/style.css
+++ b/modulo1/flex-grid/style.css
@@ -22,7 +22,7 @@ header {
   align-items: center;
   background-color: mediumvioletred;
   display: flex;
-  height: 68px;
+  height: 64px;
   justify-content: space-between;
   padding: 0 22px;
 }
@@ -40,7 +40,6 @@ header div img {
 header div button {
   padding: 2px 4px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
 }
 
 /* Main */
@@ -74,12 +73,13 @@ main {
   padding-right: 80px;
 }
 
+/* div 2 dos bolos */
+
 .div-main {
-  padding: 16px;
-  align-items: center;
+  padding: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 20px;
 }
 
 .div-main img {
@@ -108,7 +108,8 @@ footer {
   background-color: mediumvioletred;
   display: flex;
   font-weight: bold;
-  height: 68px;
+  height: 64px;
   justify-content: center;
   padding: 0 4px;
+  font-size: 20px;
 }
