--- a/modulo1/css-labetube/exercicio3/exercicio3b/exercicio3b.css
+++ b/modulo1/css-labetube/exercicio3/exercicio3b/exercicio3b.css
@@ -10,27 +10,22 @@ body {
 #main-container {
     display: grid;
     grid-template-columns: repeat(4, 25vw);
-    grid-template-rows: 5vh 70vh 10vh 10vh 5vh;
+    grid-template-rows: 5vh 70vh 20vh 5vh;
 }
 
 #top-container {
     grid-column: 1/5;
-    grid-row: 1/2;
     display: flex;
 }
 
 #middle-container {
     grid-column: 1/5;
-    grid-row: 3/5;
     display: grid;
-    grid-template-columns: repeat(4, 25vw);
-    grid-template-rows: 20vh;
 }
 
 #content2 {
     grid-column: 1/3;
-    display: flex;
-    flex-direction: column;
+    display: grid;
 }
 
 #vertical-middle-container {
@@ -38,16 +33,17 @@ body {
     display: grid;
 }
 
-#image{
-    display: flex;
+#image {
+    display: grid;
 }
-#extra{
-    display: flex;
+
+#extra {
+    display: grid;
 }
 
 #bot-container {
     grid-column: 1/5;
-    display: flex;
+    display: grid;
 }
 
 .green-background {
@@ -55,7 +51,7 @@ body {
     flex-grow: 1;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .yellow-background {
@@ -63,24 +59,22 @@ body {
     flex-grow: 3;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .pink-background {
     background-color: fuchsia;
     grid-column: 1/5;
-    grid-row: 2/3;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .blue-background {
     background-color: blue;
     display: flex;
     align-items: center;
-    justify-content: center;    
-    flex-grow: 1;
+    justify-content: center;
 }
 
 .red-background {
@@ -88,7 +82,7 @@ body {
     flex-grow: 1;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .lightgreen-background {
@@ -96,13 +90,12 @@ body {
     flex-grow: 1;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
 
 .purple-background {
     background-color: purple;
-    flex-grow: 1;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
 }
