--- a/modulo2/jsx-labetube/labetube/src/App.css
+++ b/modulo2/jsx-labetube/labetube/src/App.css
@@ -4,31 +4,45 @@ body {
   margin: 0;
 }
 
-
 .tela-inteira {
   height: 100vh;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px 1fr 100px;
   flex-direction: column;
 }
 
 header {
-  background-color: orange;
+  grid-area: 1/1/2/2;
+  border-bottom: #383838 solid 1px;
+  background-color: #202020;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 50px;
-  height: 10%;
+}
+
+header h1 {
+  color: #ffffff;
 }
 
 main {
-  min-height: 80%;
+  grid-area: 2/1/3/2;
   display: flex;
+  background-color: #181818;
+  color: #383838;
+}
+
+nav {
+  background-color: #212121;
 }
 
 .menu-vertical {
   flex-basis: 200px;
+  border-right: #383838 solid 1px;
   border-right-style: solid;
   border-right-width: thin;
+  color: #ffffff;
 }
 
 .botoes-meunu-vertical {
@@ -36,76 +50,39 @@ main {
 }
 
 .painel-de-videos {
-  padding-left: 20px;
-  padding-top: 20px;
+  color: #ffffff;
+  gap: 20px;
+  padding: 12px;
   flex-grow: 1;
   display: grid;
-  grid-template-columns: repeat(4, 24.8% 0.2%);
-  grid-template-rows: repeat(4, 270px 20px);
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 320px));
+  grid-template-rows: repeat(auto-fill, minmax(130px, 260px));
 }
-
-.media1 {
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-
-.media2 {
-  grid-column-start: 3;
-  grid-row-start: 1;
-}
-
-.media3 {
-  grid-column-start: 5;
-  grid-row-start: 1;
-}
-
-.media4 {
-  grid-column-start: 7;
-  grid-row-start: 1;
-}
-
-.media5 {
-  grid-column-start: 1;
-  grid-row-start: 3;
-}
-
-.media6 {
-  grid-column-start: 3;
-  grid-row-start: 3;
-}
-
-.media7 {
-  grid-column-start: 5;
-  grid-row-start: 3;
-}
-
-.media8 {
-  grid-column-start: 7;
-  grid-row-start: 3;
-}
-
 
 .box-pagina-principal {
+  border: #383838 1px;
   display: grid;
   grid-template-rows: 3fr 1fr;
   grid-template-columns: 1fr;
   border-style: solid;
-  border-width: thin; 
+  border-width: thin;
   align-items: start;
   justify-items: stretch;
 }
 
-
 footer {
-  height: 10%;
-  background-color: grey;
+  grid-area: 3/1/4/2;
+  border-top: #383838 solid 1px;
+  background-color: #202020;
+  color: #ffffff;
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
 }
 
-.box-pagina-principal > img {
+.box-pagina-principal>img {
   width: 100%;
   height: 200px;
 }
@@ -114,3 +91,14 @@ h4 {
   margin-left: 20px;
 }
 
+@media screen and (max-width:480px) {
+  header {
+    flex-direction: column;
+    font-size: 12px;
+    justify-content: start;
+  }
+
+  .menu-vertical {
+    flex-basis: 100px;
+  }
+}
